# temp-monitor

./: .gitignore  README.md
hwagent/: Cargo.toml
hwagent/src/: main.rs
hwmonitor-app/: Cargo.toml
hwmonitor-app/src/: main.rs  state.rs
hwmonitor-app/src/errors/: mod.rs
hwmonitor-app/src/handlers/: mod.rs
hwmonitor-app/src/models/: mod.rs
hwmonitor-app/src/routes/: mod.rs
hwmonitor-app/src/templates/: index.html  mod.rs
hwmonitor-app/static/: style.css
hwmonitor-app/templates/: index.html
