[package]
name = "hwagent"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.39.2"
tokio = { version = "1", features = ["full"] }



[profile.release]
opt-level = 'z'     
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-gnu-gcc"
