[package]
name = "hwmonitor-app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = {version = "0.8.9", features = ["macros"]}
tokio = {version="1.52.3", features=["full"]}
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
env = "1.0.1"

